add new contributor

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -415,4 +415,9 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/184654065"
         link="https://github.com/BenjaminEwe" />
+    <contributor
+        name="ryeookie"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/207253145"
+        link="https://github.com/ryeookie" />
 </resources>
