--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -55,6 +55,7 @@
 	<item drawable="xportal" />
 	<item drawable="yacguide" />
 	<item drawable="youcat_daily" />
+	<item drawable="antisplit_m" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -92,6 +93,7 @@
 	<item drawable="anova_alt_1" />
 	<item drawable="antennapod_alt_1" />
 	<item drawable="antennapod_alt_2" />
+	<item drawable="antisplit_m" />
 	<item drawable="app_drawer_alt_1" />
 	<item drawable="app_drawer_alt_2" />
 	<item drawable="app_drawer_alt_3" />
