fix order of alts, add missing lines to drawable.xml

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -934,6 +934,7 @@
 	<item drawable="samsung_health_alt_1" />
 	<item drawable="samsung_notes_alt_1" />
 	<item drawable="samsung_pay_alt_1" />
+	<item drawable="samsung_pay_alt_2" />
 	<item drawable="sber_bank_alt_1" />
 	<item drawable="sber_bank_alt_2" />
 	<item drawable="sber_eapteka_alt_1" />
