--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -88,6 +88,7 @@
 	<item drawable="xportal" />
 	<item drawable="yacguide" />
 	<item drawable="youcat_daily" />
+	<item drawable="wg_tunnel" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1504,6 +1505,7 @@
 	<item drawable="western_union_send_money_alt_1" />
 	<item drawable="wetransfer_alt_1" />
 	<item drawable="weverse_alt_1" />
+	<item drawable="wg_tunnel_alt_1" />
 	<item drawable="whatlisten_alt_1" />
 	<item drawable="whoosh_sharing_alt_1" />
 	<item drawable="wifi_analyzer_alt_1" />
