--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -89,6 +89,10 @@
 	<item drawable="yacguide" />
 	<item drawable="youcat_daily" />
 	<item drawable="wg_tunnel" />
+	<item drawable="lemon_cash" />
+	<item drawable="unchained" />
+	<item drawable="startpage" />
+	<item drawable="glassdoor" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -592,6 +596,7 @@
 	<item drawable="geto_alt_2" />
 	<item drawable="gett_alt_1" />
 	<item drawable="github_alt_1" />
+	<item drawable="glassdoor_alt_1" />
 	<item drawable="glitch_lab_alt_1" />
 	<item drawable="global_icon_pack_alt_1" />
 	<item drawable="google_allo_alt_1" />
@@ -684,6 +689,7 @@
 	<item drawable="lcl_mes_comptes_alt_1" />
 	<item drawable="learn_anywhere_alt_1" />
 	<item drawable="learnneo_alt_1" />
+	<item drawable="lemon_cash_alt_1" />
 	<item drawable="lensa_alt_1" />
 	<item drawable="leroy_merlin_alt_1" />
 	<item drawable="libretube_bird" />
@@ -1325,6 +1331,7 @@
 	<item drawable="spotify_alt_1" />
 	<item drawable="spotube_alt_1" />
 	<item drawable="stan_alt_1" />
+	<item drawable="startpage_alt_1" />
 	<item drawable="stealth_alt_1" />
 	<item drawable="stellio_alt_1" />
 	<item drawable="stock_market_simulator_alt_1" />
@@ -1486,6 +1493,7 @@
 	<item drawable="twitter_lite_alt_2" />
 	<item drawable="udemy_alt_1" />
 	<item drawable="ulife_alt_1" />
+	<item drawable="unchained_alt_1" />
 	<item drawable="unified_remote_alt_1" />
 	<item drawable="unitto_alt_1" />
 	<item drawable="up_banking_alt_1" />
