--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -16962,4 +16962,23 @@
 	<item component="ComponentInfo{zombie.survival.craft.z/ru.kv3dunityext.permissions.MainActivity}" drawable="last_day_on_earth_survival" />
 	<item component="ComponentInfo{zte.com.cn.alarmclock/zte.com.cn.alarmclock.activity.AlarmClockActivity}" drawable="clock" />
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Amber}" drawable="fossify_thank_you_amber" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Blue_grey}" drawable="fossify_thank_you_blue_grey" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Blue}" drawable="fossify_thank_you_blue" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Brown}" drawable="fossify_thank_you_brown" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Cyan}" drawable="fossify_thank_you_cyan" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Deep_orange}" drawable="fossify_thank_you_deep_orange" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Deep_purple}" drawable="fossify_thank_you_deep_purple" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Green}" drawable="fossify_thank_you" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Grey_black}" drawable="fossify_thank_you_grey_black" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Indigo}" drawable="fossify_thank_you_indigo" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Light_blue}" drawable="fossify_thank_you_light_blue" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Light_green}" drawable="fossify_thank_you_light_green" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Lime}" drawable="fossify_thank_you_lime" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Orange}" drawable="fossify_thank_you_orange" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Pink}" drawable="fossify_thank_you_pink" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Purple}" drawable="fossify_thank_you_purple" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Red}" drawable="fossify_thank_you_red" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Teal}" drawable="fossify_thank_you_teal" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Yellow}" drawable="fossify_thank_you_yellow" />
 </resources>
