--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -93,6 +93,27 @@
 	<item drawable="unchained" />
 	<item drawable="startpage" />
 	<item drawable="glassdoor" />
+	<item drawable="jupiter" />
+	<item drawable="roblox" />
+	<item drawable="fossify_thank_you" />
+	<item drawable="fossify_thank_you_amber" />
+	<item drawable="fossify_thank_you_blue" />
+	<item drawable="fossify_thank_you_blue_grey" />
+	<item drawable="fossify_thank_you_brown" />
+	<item drawable="fossify_thank_you_cyan" />
+	<item drawable="fossify_thank_you_deep_orange" />
+	<item drawable="fossify_thank_you_deep_purple" />
+	<item drawable="fossify_thank_you_grey_black" />
+	<item drawable="fossify_thank_you_indigo" />
+	<item drawable="fossify_thank_you_light_blue" />
+	<item drawable="fossify_thank_you_light_green" />
+	<item drawable="fossify_thank_you_lime" />
+	<item drawable="fossify_thank_you_orange" />
+	<item drawable="fossify_thank_you_pink" />
+	<item drawable="fossify_thank_you_purple" />
+	<item drawable="fossify_thank_you_red" />
+	<item drawable="fossify_thank_you_teal" />
+	<item drawable="fossify_thank_you_yellow" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -564,6 +585,24 @@
 	<item drawable="fossify_phone_red" />
 	<item drawable="fossify_phone_teal" />
 	<item drawable="fossify_phone_yellow" />
+	<item drawable="fossify_thank_you_amber" />
+	<item drawable="fossify_thank_you_blue" />
+	<item drawable="fossify_thank_you_blue_grey" />
+	<item drawable="fossify_thank_you_brown" />
+	<item drawable="fossify_thank_you_cyan" />
+	<item drawable="fossify_thank_you_deep_orange" />
+	<item drawable="fossify_thank_you_deep_purple" />
+	<item drawable="fossify_thank_you_grey_black" />
+	<item drawable="fossify_thank_you_indigo" />
+	<item drawable="fossify_thank_you_light_blue" />
+	<item drawable="fossify_thank_you_light_green" />
+	<item drawable="fossify_thank_you_lime" />
+	<item drawable="fossify_thank_you_orange" />
+	<item drawable="fossify_thank_you_pink" />
+	<item drawable="fossify_thank_you_purple" />
+	<item drawable="fossify_thank_you_red" />
+	<item drawable="fossify_thank_you_teal" />
+	<item drawable="fossify_thank_you_yellow" />
 	<item drawable="fossify_voice_recorder_amber" />
 	<item drawable="fossify_voice_recorder_blue" />
 	<item drawable="fossify_voice_recorder_blue_grey" />
@@ -673,6 +712,7 @@
 	<item drawable="joox_alt_1" />
 	<item drawable="joplin_alt_1" />
 	<item drawable="junior_hockey_league_alt_1" />
+	<item drawable="jupiter_alt_1" />
 	<item drawable="just_dance_controller_alt_1" />
 	<item drawable="k_nine_mail_alt_1" />
 	<item drawable="keep_talking_and_nobody_explodes_alt_1" />
@@ -931,6 +971,7 @@
 	<item drawable="rimusic_alt_2" />
 	<item drawable="robinhood_alt_1" />
 	<item drawable="roblox_alt_1" />
+	<item drawable="roblox_alt_2" />
 	<item drawable="runtastic_alt_1" />
 	<item drawable="safespace_alt_1" />
 	<item drawable="sagernet_alt_1" />
@@ -5485,6 +5526,7 @@
 	<item drawable="fossify_notes" />
 	<item drawable="fossify_paint" />
 	<item drawable="fossify_phone" />
+	<item drawable="fossify_thank_you" />
 	<item drawable="fossify_voice_recorder" />
 	<item drawable="fossil_smartwatches" />
 	<item drawable="fotmob" />
