Add icons&compinfo (#1165)
* add icons

* add componentinfo

* add icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -16962,4 +16962,59 @@
 	<item component="ComponentInfo{zombie.survival.craft.z/ru.kv3dunityext.permissions.MainActivity}" drawable="last_day_on_earth_survival" />
 	<item component="ComponentInfo{zte.com.cn.alarmclock/zte.com.cn.alarmclock.activity.AlarmClockActivity}" drawable="clock" />
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Amber}" drawable="fossify_thank_you_amber" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Blue_grey}" drawable="fossify_thank_you_blue_grey" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Blue}" drawable="fossify_thank_you_blue" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Brown}" drawable="fossify_thank_you_brown" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Cyan}" drawable="fossify_thank_you_cyan" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Deep_orange}" drawable="fossify_thank_you_deep_orange" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Deep_purple}" drawable="fossify_thank_you_deep_purple" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Green}" drawable="fossify_thank_you" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Grey_black}" drawable="fossify_thank_you_grey_black" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Indigo}" drawable="fossify_thank_you_indigo" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Light_blue}" drawable="fossify_thank_you_light_blue" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Light_green}" drawable="fossify_thank_you_light_green" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Lime}" drawable="fossify_thank_you_lime" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Orange}" drawable="fossify_thank_you_orange" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Pink}" drawable="fossify_thank_you_pink" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Purple}" drawable="fossify_thank_you_purple" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Red}" drawable="fossify_thank_you_red" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Teal}" drawable="fossify_thank_you_teal" />
+	<item component="ComponentInfo{org.fossify.thankyou/org.fossify.thankyou.activities.SplashActivity.Yellow}" drawable="fossify_thank_you_yellow" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Amber}" drawable="fossify_launcher_amber" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Blue_grey}" drawable="fossify_launcher_blue_grey" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Brown}" drawable="fossify_launcher_brown" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Cyan}" drawable="fossify_launcher_cyan" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Deep_orange}" drawable="fossify_launcher_deep_orange" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Deep_purple}" drawable="fossify_launcher_deep_purple" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Grey_black}" drawable="fossify_launcher_grey_black" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Indigo}" drawable="fossify_launcher_indigo" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Light_blue}" drawable="fossify_launcher_light_blue" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Light_green}" drawable="fossify_launcher_light_green" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Lime}" drawable="fossify_launcher_lime" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Orange}" drawable="fossify_launcher_orange" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Pink}" drawable="fossify_launcher_pink" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Purple}" drawable="fossify_launcher_purple" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Red}" drawable="fossify_launcher_red" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Teal}" drawable="fossify_launcher_teal" />
+	<item component="ComponentInfo{org.fossify.home/org.fossify.home.activities.SplashActivity.Yellow}" drawable="fossify_launcher_yellow" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Amber}" drawable="fossify_calculator_amber" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Blue_grey}" drawable="fossify_calculator_blue_grey" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Blue}" drawable="fossify_calculator_blue" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Brown}" drawable="fossify_calculator_brown" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Cyan}" drawable="fossify_calculator_cyan" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Deep_orange}" drawable="fossify_calculator_deep_orange" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Deep_purple}" drawable="fossify_calculator_deep_purple" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Green}" drawable="fossify_calculator" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Grey_black}" drawable="fossify_calculator_grey_black" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Indigo}" drawable="fossify_calculator_indigo" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Light_blue}" drawable="fossify_calculator_light_blue" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Light_green}" drawable="fossify_calculator_light_green" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Lime}" drawable="fossify_calculator_lime" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Orange}" drawable="fossify_calculator_orange" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Pink}" drawable="fossify_calculator_pink" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Purple}" drawable="fossify_calculator_purple" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Red}" drawable="fossify_calculator_red" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Teal}" drawable="fossify_calculator_teal" />
+	<item component="ComponentInfo{org.fossify.math/org.fossify.math.activities.SplashActivity.Yellow}" drawable="fossify_calculator_yellow" />
 </resources>
