--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -177,6 +177,8 @@
 	<item drawable="youcat_daily" />
 	<item drawable="zashi" />
 	<item drawable="zettel_notes" />
+	<item drawable="mobile_pay" />
+	<item drawable="zalopay" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -868,6 +870,7 @@
 	<item drawable="mlauncher_alt_1" />
 	<item drawable="mlb_ballpark_alt_1" />
 	<item drawable="mmrl_alt_1" />
+	<item drawable="mobile_pay_alt_1" />
 	<item drawable="moelist_alt_1" />
 	<item drawable="money_fellows_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
@@ -1667,6 +1670,7 @@
 	<item drawable="youtube_vanced_alt_3" />
 	<item drawable="youtube_vanced_alt_4" />
 	<item drawable="ytdlnis_alt_1" />
+	<item drawable="zalopay_alt_1" />
 	<item drawable="zappka_alt_1" />
 	<item drawable="zattoo_alt_1" />
 	<item drawable="zello_alt_1" />
