--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -179,6 +179,7 @@
 	<item drawable="zettel_notes" />
 	<item drawable="mobile_pay" />
 	<item drawable="zalopay" />
+	<item drawable="bleacherreport" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -263,6 +264,7 @@
 	<item drawable="bitdefender_central_alt_1" />
 	<item drawable="bitlife_alt_1" />
 	<item drawable="bixby_alt_1" />
+	<item drawable="bleacherreport_alt_1" />
 	<item drawable="bluesky_alt_1" />
 	<item drawable="booking_com_alt_1" />
 	<item drawable="bookmate_alt_1" />
