--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -180,6 +180,7 @@
 	<item drawable="mobile_pay" />
 	<item drawable="zalopay" />
 	<item drawable="bleacherreport" />
+	<item drawable="nothing_weather" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -928,6 +929,7 @@
 	<item drawable="no_icon_alt_1" />
 	<item drawable="notally_alt_1" />
 	<item drawable="notesnook_alt_1" />
+	<item drawable="nothing_weather_alt_1" />
 	<item drawable="notify_for_smartwatches_alt_1" />
 	<item drawable="noto_airplane" />
 	<item drawable="noto_alt_1" />
