--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11000,7 +11000,7 @@
 	<item component="ComponentInfo{com.ticketmaster.mobile.android.na/com.ticketmaster.mobile.android.library.activity.MainActivity}" drawable="ticketmaster" />
 	<item component="ComponentInfo{com.ticketmaster.tickets.international/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="ticketmaster" />
 	<item component="ComponentInfo{com.ticktick.task/com.ticktick.task.HomeAlia_default}" drawable="tick__tick" />
-	<item component="ComponentInfo{com.ticktick.task/com.ticktick.task.HomeAlia_tick}" drawable="tick_tick" />
+	<item component="ComponentInfo{com.ticktick.task/com.ticktick.task.HomeAlia_tick}" drawable="tick__tick" />
 	<item component="ComponentInfo{com.ticktick.task/com.ticktick.task.activity.MeTaskActivity}" drawable="tick__tick" />
 	<item component="ComponentInfo{com.tidusjar.Ombi/com.tidusjar.Ombi.MainActivity}" drawable="ombi" />
 	<item component="ComponentInfo{com.tiefensuche.soundcrowd/com.tiefensuche.soundcrowd.ui.MusicPlayerActivity}" drawable="soundcrowd" />
