--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -42,7 +42,7 @@
 	<item drawable="anova_alt_1" />
 	<item drawable="antennapod_alt_1" />
 	<item drawable="antennapod_alt_2" />
-	<item drawable="antisplit_m" />
+	<item drawable="antisplit_m_alt_1" />
 	<item drawable="app_drawer_alt_1" />
 	<item drawable="app_drawer_alt_2" />
 	<item drawable="app_drawer_alt_3" />
