Add icons&compinfo (#1173)
* add icons, premium request

* add icons

* add componentinfo

* small fixes

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="motorola_notifications" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -41,7 +42,7 @@
 	<item drawable="anova_alt_1" />
 	<item drawable="antennapod_alt_1" />
 	<item drawable="antennapod_alt_2" />
-	<item drawable="antisplit_m" />
+	<item drawable="antisplit_m_alt_1" />
 	<item drawable="app_drawer_alt_1" />
 	<item drawable="app_drawer_alt_2" />
 	<item drawable="app_drawer_alt_3" />
@@ -700,6 +701,7 @@
 	<item drawable="moelist_alt_1" />
 	<item drawable="money_fellows_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
+	<item drawable="motorola_notifications_alt_1" />
 	<item drawable="mts_my_alt_1" />
 	<item drawable="mulch_alt_1" />
 	<item drawable="mull_alt_1" />
