--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,7 @@
 
 	<category title="New" />
 	<item drawable="motorola_notifications" />
+	<item drawable="somtoday" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1255,6 +1256,7 @@
 	<item drawable="sofascore_alt_1" />
 	<item drawable="sofascore_alt_2" />
 	<item drawable="solar_smash_alt_1" />
+	<item drawable="somtoday_alt_1" />
 	<item drawable="sonic_cd_alt_1" />
 	<item drawable="sonic_drive_in_alt_1" />
 	<item drawable="sonic_the_hedgehog_2_alt_1" />
