--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6,6 +6,7 @@
 	<category title="New" />
 	<item drawable="motorola_notifications" />
 	<item drawable="somtoday" />
+	<item drawable="ultimate_guitar" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1432,6 +1433,7 @@
 	<item drawable="twitter_lite_alt_2" />
 	<item drawable="udemy_alt_1" />
 	<item drawable="ulife_alt_1" />
+	<item drawable="ultimate_guitar_alt_1" />
 	<item drawable="unchained_alt_1" />
 	<item drawable="unified_remote_alt_1" />
 	<item drawable="unitto_alt_1" />
