new icon: Eventbrite (moved the old one to alt_1)

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -4181,7 +4181,7 @@
 	<item component="ComponentInfo{com.eurosport/com.eurosport.universel.ui.activities.SplashscreenActivity}" drawable="eurosport" />
 	<item component="ComponentInfo{com.evamall.evacustomer/com.evamall.evacustomer.splash.SplashActivity}" drawable="decathlon" />
 	<item component="ComponentInfo{com.eveningoutpost.dexdrip/com.eveningoutpost.dexdrip.Home}" drawable="xdrip" />
-	<item component="ComponentInfo{com.eventbrite.attendee/com.eventbrite.attendee.activities.MainActivity}" drawable="eventbrite" />
+	<item component="ComponentInfo{com.eventbrite.attendee/com.eventbrite.attendee.activities.MainActivity}" drawable="eventbrite_alt_1" />
 	<item component="ComponentInfo{com.evenwell.camera2/com.android.camera.CameraLauncher}" drawable="camera" />
 	<item component="ComponentInfo{com.evenwell.fmradio/com.evenwell.fmradio.FMRadioActivity}" drawable="fm_radio" />
 	<item component="ComponentInfo{com.everfox.animetrackerandroid/com.everfox.animetrackerandroid.MainActivity}" drawable="kitsu" />
