--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -280,6 +280,7 @@
 	<item drawable="eternium_alt_1" />
 	<item drawable="etitulobr_alt_1" />
 	<item drawable="eurosport_alt_1" />
+	<item drawable="eventbrite_alt_1" />
 	<item drawable="every_door_alt_1" />
 	<item drawable="exodus_alt_1" />
 	<item drawable="fampay_alt_1" />
@@ -5159,7 +5160,6 @@
 	<item drawable="ev_map" />
 	<item drawable="evac" />
 	<item drawable="event_flow_calendar_widget" />
-	<item drawable="eventbrite" />
 	<item drawable="eventim" />
 	<item drawable="everdale" />
 	<item drawable="everest" />
