Add Life Bible icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10761,8 +10761,8 @@
 	<item component="ComponentInfo{com.teamviewer.teamviewer.market.mobile/com.teamviewer.remotecontrollib.activity.MainActivity}" drawable="teamviewer" />
 	<item component="ComponentInfo{com.teamwood.spacewood.unity/com.unity3d.player.UnityPlayerActivity}" drawable="super_auto_pets" />
 	<item component="ComponentInfo{com.teaxapp.hourcal/com.teaxapp.hourcal.MainActivity}" drawable="time_calculator" />
-	<item component="ComponentInfo{com.tecarta.TecartaBible/com.tecarta.TecartaBible.MainActivity}" drawable="bible" />
-	<item component="ComponentInfo{com.tecarta.TecartaBible/com.tecarta.bible.main.MainActivity}" drawable="bible" />
+	<item component="ComponentInfo{com.tecarta.TecartaBible/com.tecarta.TecartaBible.MainActivity}" drawable="life_bible" />
+	<item component="ComponentInfo{com.tecarta.TecartaBible/com.tecarta.bible.main.MainActivity}" drawable="life_bible" />
 	<item component="ComponentInfo{com.tecdrop.pitchblackwallpaper/com.tecdrop.pitchblackwallpaper.PitchBlackWallpaperActivity}" drawable="pitch_black_wallpaper" />
 	<item component="ComponentInfo{com.tecdrop.rgbwallpaper/com.tecdrop.rgbwallpaper.RGBColorActivity}" drawable="rgb_color_wallpaper" />
 	<item component="ComponentInfo{com.techburner.freshwalls/com.oddlyspaced.walls.ui.activity.MainActivity}" drawable="wallsplash" />
