--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -81,6 +81,7 @@
 	<item drawable="youtube_create" />
 	<item drawable="zigzag" />
 	<item drawable="zing" />
+	<item drawable="mixcloud" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -773,6 +774,7 @@
 	<item drawable="minecraft_alt_2" />
 	<item drawable="minerals_guide_plus_identifier_alt_1" />
 	<item drawable="minimalist_pomodoro_timer_alt_1" />
+	<item drawable="mixcloud_alt_1" />
 	<item drawable="mj_pdf_reader_alt_1" />
 	<item drawable="mlauncher_alt_1" />
 	<item drawable="mlb_ballpark_alt_1" />
