--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -15122,7 +15122,7 @@
 	<item component="ComponentInfo{org.cyanogenmod.snap/com.android.camera.CameraLauncher}" drawable="camera" />
 	<item component="ComponentInfo{org.cyanogenmod.theme.chooser2/org.cyanogenmod.theme.chooser2.ChooserLauncher}" drawable="theme_chooser" />
 	<item component="ComponentInfo{org.cyanogenmod.theme.chooser/org.cyanogenmod.theme.chooser.ChooserActivity}" drawable="theme_chooser" />
-	<item component="ComponentInfo{org.cygnusx1.continuum/ml.docilealligator.infinityforreddit.activities.MainActivit}" drawable="continuum" />
+	<item component="ComponentInfo{org.cygnusx1.continuum/ml.docilealligator.infinityforreddit.activities.MainActivity}" drawable="continuum" />
 	<item component="ComponentInfo{org.dandroidmobile.androlinux/org.dandroidmobile.androlinux.MainMenuActivity}" drawable="androlinux" />
 	<item component="ComponentInfo{org.dashnet.cookieclicker/org.dashnet.cookieclicker.MainActivity}" drawable="cookie_clickers" />
 	<item component="ComponentInfo{org.daylightingsociety.wherearetheeyes/org.daylightingsociety.wherearetheeyes.MainActivity}" drawable="wherearetheeyes" />
