--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -111,6 +111,10 @@
 	<item drawable="youtube_create" />
 	<item drawable="zigzag" />
 	<item drawable="zing" />
+	<item drawable="ente" />
+	<item drawable="ente_light" />
+	<item drawable="ente_dark" />
+	<item drawable="ente_og" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -304,7 +308,9 @@
 	<item drawable="edem_rf_alt_2" />
 	<item drawable="edusign_intervenant_alt_1" />
 	<item drawable="elements_kwgt_alt_1" />
-	<item drawable="ente_alt_1" />
+	<item drawable="ente_light" />
+	<item drawable="ente_dark" />
+	<item drawable="ente_og" />
 	<item drawable="ente_auth_alt_1" />
 	<item drawable="eternity_alt_1" />
 	<item drawable="eternium_alt_1" />
