--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -581,8 +581,8 @@
 	<item component="ComponentInfo{az.unibank.mbanking/bank.activity.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{az.unibank.mbanking/bank.activity.MigrationActivity}" drawable="bank" />
 	<item component="ComponentInfo{balti.migrate.ng/balti.migrate.simpleActivities.MainActivityKotlin}" drawable="migrate_ng_new" />
-	<item component="ComponentInfo{balti.migrate/balti.migrate.app.MainActivity}" drawable="migrate" />
-<item component="ComponentInfo{balti.migrate/balti.migrate.simpleActivities.MainActivityKotlin}" drawable="migrate_gpe" />
+	<item component="ComponentInfo{balti.migrate/balti.migrate.app.MainActivity}" drawable="migrate_gpe" />
+	<item component="ComponentInfo{balti.migrate/balti.migrate.simpleActivities.MainActivityKotlin}" drawable="migrate_gpe" />
 	<item component="ComponentInfo{balti.powermenu.shortcuts/balti.powermenu.shortcuts.mainActivity.MainActivity}" drawable="power_menu_controls" />
 	<item component="ComponentInfo{balti.xposed.pixelifygooglephotos/balti.xposed.pixelifygooglephotos.ActivityMain}" drawable="pixelify_gphotos" />
 	<item component="ComponentInfo{bancaribe.miconexion/bancaribe.miconexion.MainActivity}" drawable="bancaribe_digital" />
