Add missing drawable

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="life_bible" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -7008,6 +7009,7 @@
 	<item drawable="lidl_home" />
 	<item drawable="lidl_plus" />
 	<item drawable="life360" />
+	<item drawable="life_bible" />
 	<item drawable="life_time_digital" />
 	<item drawable="lifeafter" />
 	<item drawable="lifehacker" />
