add icons, premium requests

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,7 @@
 
 	<category title="New" />
 	<item drawable="life_bible" />
+	<item drawable="yemeksepeti" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1490,6 +1491,7 @@
 	<item drawable="yandex_start_alt_1" />
 	<item drawable="yandex_translate_alt_1" />
 	<item drawable="yatse_alt_1" />
+	<item drawable="yemeksepeti_alt_1" />
 	<item drawable="yetcalc_alt_1" />
 	<item drawable="you_com_alt_1" />
 	<item drawable="youtube_alt_1" />
