Update Wise icon
Wise rebranded from blue to green in 2023.

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -17,6 +17,7 @@
 	<item drawable="paycell" />
 	<item drawable="pdf_wallet" />
 	<item drawable="telepass" />
+	<item drawable="wise" />
 	<item drawable="yemeksepeti" />
 
 	<category title="Alts" />
@@ -1479,6 +1480,7 @@
 	<item drawable="wifi_analyzer_alt_1" />
 	<item drawable="winamp_alt_1" />
 	<item drawable="windtre_alt_1" />
+	<item drawable="wise_alt_1" />
 	<item drawable="wordle_alt_1" />
 	<item drawable="wow_companion_alt_1" />
 	<item drawable="xash_three_d_fwgs_alt_1" />
