--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2706,6 +2706,7 @@
 	<item component="ComponentInfo{com.bol.shop/com.bol.shop.launch.LaunchActivity}" drawable="bolcom" />
 	<item component="ComponentInfo{com.bol.shop/com.bol.shop.launch.ui.LaunchActivity}" drawable="bolcom" />
 	<item component="ComponentInfo{com.bolt.deliveryclient/com.boltdeliveryclientapp.LaunchActivity}" drawable="bolt_food" />
+	<item component="ComponentInfo{com.bolt.deliveryclient/com.bolt.deliveryclient.MainActivity}" drawable="bolt_food" />
 	<item component="ComponentInfo{com.bonusxp.legend/com.bonusxp.legend.Legend}" drawable="stranger_things" />
 	<item component="ComponentInfo{com.bonzamobile/com.bonzamobile.MainActivity}" drawable="fly_bonza" />
 	<item component="ComponentInfo{com.bookbeat.android/com.bookbeat.android.home.HomeTabBarActivity}" drawable="bookbeat" />
