Fix ComponentInfo for Yr

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -14947,6 +14947,7 @@
 	<item component="ComponentInfo{no.mobitroll.kahoot.android/no.mobitroll.kahoot.android.Default}" drawable="kahoot" />
 	<item component="ComponentInfo{no.mobitroll.kahoot.android/no.mobitroll.kahoot.android.application.SplashActivity}" drawable="kahoot" />
 	<item component="ComponentInfo{no.nordea.mobilebank/com.nordea.mobilebank.start.SplashscreenActivity}" drawable="nordea" />
+	<item component="ComponentInfo{no.nrk.yr/no.nrk.yr.MainActivity}" drawable="yr" />
 	<item component="ComponentInfo{no.nrk.yr/no.nrk.yr.SplashScreenActivity}" drawable="yr" />
 	<item component="ComponentInfo{no.nrk.yr/no.nrk.yr.StartActivity}" drawable="yr" />
 	<item component="ComponentInfo{no.rikstv.app/no.rikstv.app.MainActivity}" drawable="rikstv" />
