add missing line

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -9286,6 +9286,7 @@
 	<item drawable="porter" />
 	<item drawable="portfolio_performance" />
 	<item drawable="portsip_softphone" />
+	<item drawable="portuguese_dictionary_offline" />
 	<item drawable="poshmark" />
 	<item drawable="posidon_launcher" />
 	<item drawable="positional" />
