--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -19,6 +19,7 @@
 	<item drawable="telepass" />
 	<item drawable="wise" />
 	<item drawable="yemeksepeti" />
+	<item drawable="portuguese_dictionary_offline" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -858,6 +859,7 @@
 	<item drawable="poe_alt_1" />
 	<item drawable="polar_flow_alt_1" />
 	<item drawable="portal_valve_alt_1" />
+	<item drawable="portuguese_dictionary_offline_alt_1" />
 	<item drawable="poste_italiane_alt_1" />
 	<item drawable="powerup_alt_1" />
 	<item drawable="ppsspp_alt_1" />
