--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -20,6 +20,8 @@
 	<item drawable="wise" />
 	<item drawable="yemeksepeti" />
 	<item drawable="portuguese_dictionary_offline" />
+	<item drawable="echo" />
+	<item drawable="echo_nightly" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -208,6 +210,7 @@
 	<item drawable="easter_eggs_alt_1" />
 	<item drawable="easter_eggs_alt_2" />
 	<item drawable="ebay_kleinanzeigen_alt_1" />
+	<item drawable="echo_alt_1" />
 	<item drawable="ecosia_alt_1" />
 	<item drawable="edem_rf_alt_1" />
 	<item drawable="edem_rf_alt_2" />
