Fix ComponentInfo for Barclays
There is already a custom icon for Barclays but by default the
ComponentInfo uses the bank icon at the moment.

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2419,7 +2419,7 @@
 	<item component="ComponentInfo{com.banyuw.simpan/com.banyuw.simpan.ui.MainActivity}" drawable="simpan" />
 	<item component="ComponentInfo{com.bapspatil.kutin/com.bapspatil.kutin.MainActivity}" drawable="kut_in" />
 	<item component="ComponentInfo{com.barclaycard.germany/com.veripark.barclaycard.screen.main.activities.MainActivity}" drawable="barclays" />
-	<item component="ComponentInfo{com.barclays.android.barclaysmobilebanking/com.barclays.android.registration.NRegSplashActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.barclays.android.barclaysmobilebanking/com.barclays.android.registration.NRegSplashActivity}" drawable="barclays" />
 	<item component="ComponentInfo{com.barco.clickshare.presenter/com.barco.clickshare2.OnBoardingActivity}" drawable="clickshare" />
 	<item component="ComponentInfo{com.barcode.qrcode.scanner.reader.pro/com.barcode.qrcode.scanner.reader.pro.activity.MainActivity}" drawable="qr_barcode_scanner" />
 	<item component="ComponentInfo{com.bardi.smart.home/com.smart.TuyaSplashActivity}" drawable="bardi_smart_home" />
