add 2 icons with compinfo

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -420,4 +420,9 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/207253145"
         link="https://github.com/ryeookie" />    
+    <contributor
+        name="leywino"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/109560213"
+        link="https://github.com/leywino" />    
 </resources>
